added app.js link to the html, created/initialized firebase, created and obtained weather api key and call

--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
                           <form>
                               <div class="form-group">
                                 <label for="formGroupExampleInput">Cravings 1</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                                <input type="text" class="form-control" id="formGroupExampleInput1" placeholder="Example input">
                               </div>
                               <div class="form-group">
                                   <label for="formGroupExampleInput">Cravings 2</label>
-                                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example input">
                                 </div>
                                 <div class="form-group">
                                     <label for="formGroupExampleInput">Cravings 3</label>
-                                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+                                    <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Example input">
                                   </div>
                               <div class="form-group">
                                 <label for="formGroupExampleInput2">zip code</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Another input">
                               </div>
                               <div class="form-group">
                                   <label for="exampleFormControlSelect1">Party size</label>
