adjusted ids in the html, click function working

--- a/index.html
+++ b/index.html
@@ -86,24 +86,24 @@
                       <div class="modal-body">
                           <form>
                               <div class="form-group">
-                                <label for="formGroupExampleInput">Cravings 1</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput1" placeholder="Example input">
+                                <label for="crave-1-input">Cravings 1</label>
+                                <input type="text" class="form-control" id="crave-1-input" placeholder="Example input">
                               </div>
                               <div class="form-group">
-                                  <label for="formGroupExampleInput">Cravings 2</label>
-                                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Example input">
+                                  <label for="crave-2-input">Cravings 2</label>
+                                  <input type="text" class="form-control" id="crave-2-input" placeholder="Example input">
                                 </div>
                                 <div class="form-group">
-                                    <label for="formGroupExampleInput">Cravings 3</label>
-                                    <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Example input">
+                                    <label for="crave-3-input">Cravings 3</label>
+                                    <input type="text" class="form-control" id="crave-3-input" placeholder="Example input">
                                   </div>
                               <div class="form-group">
-                                <label for="formGroupExampleInput2">zip code</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Another input">
+                                <label for="zip-input">zip code</label>
+                                <input type="text" class="form-control" id="zip-input" placeholder="Another input">
                               </div>
                               <div class="form-group">
-                                  <label for="exampleFormControlSelect1">Party size</label>
-                                  <select class="form-control" id="exampleFormControlSelect1">
+                                  <label for="party-input">Party size</label>
+                                  <select class="form-control" id="party-input">
                                     <option>1</option>
                                     <option>2</option>
                                     <option>3</option>
@@ -115,14 +115,14 @@
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" id="saveChangesButton" class="btn btn-primary">Save changes</button>
+                        <button type="button" id="save" class="btn btn-primary">Save changes</button>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <button type="button" class="btn btn-outline-success">button</button>
+            <button type="button" id="firstButton" class="btn btn-outline-success">button</button>
             <button type="button" class="btn btn-outline-success">button</button>
             <button type="button" class="btn btn-outline-success">button</button>
             <button type="button" class="btn btn-outline-success">button</button>
