--- a/index.html
+++ b/index.html
@@ -60,74 +60,92 @@
               <div class="container"> 
                 <h1 class="display-4">Git-Grub</h1>
                 <p class="lead">Where your cravings navigate you.</p>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+                <button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter" id="refineButton">
                   Refine Search Here.
                 </button>
 
                 <!--Start of modal inside jumbotron-->
 
-                        <!--"Modal-header"-->
                 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-
-                                <!--"X" close button on modal header-->
-
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                                <!--End of modal-header-->
-
-                                <!--Start of "modal-body"-->
-                      <div class="modal-body">
-                        
-                                <!--"form-group" inside the modal-->
-                          <form>
-                              <div class="form-group">
-
-                                <label for="crave-1-input">Cravings 1</label>
-                                <input type="text" class="form-control" id="crave-1-input" placeholder="Example input">
-                              </div>
-                              <div class="form-group">
-                                  <label for="crave-2-input">Cravings 2</label>
-                                  <input type="text" class="form-control" id="crave-2-input" placeholder="Example input">
-                                </div>
-                                <div class="form-group">
-                                    <label for="crave-3-input">Cravings 3</label>
-                                    <input type="text" class="form-control" id="crave-3-input" placeholder="Example input">
-                                  </div>
-                              <div class="form-group">
-                                <label for="zip-input">zip code</label>
-                                <input type="text" class="form-control" id="zip-input" placeholder="Another input">
-                              </div>
-                              <div class="form-group">
-                                  <label for="party-input">Party size</label>
-                                  <select class="form-control" id="party-input">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                  </select>
-                                </div>
-                            </form>
-                            <!--END OF "form-group" FOR MODAL-->
-                      </div>
-                            <!--form-group modal footer-->
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" id="save" class="btn btn-primary">Save changes</button>
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                      <div class="form-group">
+                                              <label for="party-input">Party size</label>
+                                              <select class="form-control" id="party-input">
+                                                <option>1</option>
+                                                <option>2</option>
+                                                <option>3</option>
+                                                <option>4</option>
+                                                <option>5</option>
+                                              </select>
+                                            </div>
+                                            <button  type="button" class="btn btn-primary" id="partyConfirm">
+                                                    Confirm Party Size
+                                                  </button>
+                                          <div class="form-group" id="crave-1-input" >
+                                              <label>Cravings for person 1</label>
+                                                <button type="button" class="btnChoice">Italian</button>
+                                                <button type="button" class="btnChoice">American</button>
+                                                <button type="button" class="btnChoice">Chinese</button>
+                                                <button type="button" class="btnChoice">Mexican</button>
+                                                <button type="button" class="btnChoice">Indian</button>
+                                              </div>
+                                          <div class="form-group"   id="crave-2-input">
+                                              <label>Cravings for person 2</label>
+                                                <button type="button" class="btnChoice">Italian</button>
+                                                <button type="button" class="btnChoice">American</button>
+                                                <button type="button" class="btnChoice">Chinese</button>
+                                                <button type="button" class="btnChoice">Mexican</button>
+                                                <button type="button" class="btnChoice">Indian</button>
+                                              </div>
+                                              <div class="form-group"  id="crave-3-input">
+                                                      <label>Cravings for person 3</label>
+                                                        <button type="button" class="btnChoice">Italian</button>
+                                                        <button type="button" class="btnChoice">American</button>
+                                                        <button type="button" class="btnChoice">Chinese</button>
+                                                        <button type="button" class="btnChoice">Mexican</button>
+                                                        <button type="button" class="btnChoice">Indian</button>
+                                                      </div>
+                                                      <div class="form-group" id="crave-4-input">
+                                                              <label >Cravings for person 4</label>
+                                                                <button type="button" class="btnChoice">Italian</button>
+                                                                <button type="button" class="btnChoice">American</button>
+                                                                <button type="button" class="btnChoice">Chinese</button>
+                                                                <button type="button" class="btnChoice">Mexican</button>
+                                                                <button type="button" class="btnChoice">Indian</button>
+                                                      </div>
+                                                      <div class="form-group" id="crave-5-input">
+                                                              <label>Cravings for person 5</label>
+                                                                <button type="button" class="btnChoice">Italian</button>
+                                                                <button type="button" class="btnChoice">American</button>
+                                                                <button type="button" class="btnChoice">Chinese</button>
+                                                                <button type="button" class="btnChoice">Mexican</button>
+                                                                <button type="button" class="btnChoice">Indian</button>
+                                                              </div>
+                                    <div class="form-group">
+                                      <label for="formGroupExampleInput2">zip code</label>
+                                      <input type="text" class="form-control" id="zip-input" placeholder="Another input">
+                                    </div>
+                                   
+                                  </form>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              <button type="button" class="btn btn-primary" id="save">Save changes</button>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <!--END OF MODAL-->
-              </div>
-            </div>
-
 
             <!--Buttons below the jumbotron-->
             <button type="button" class="btn btn-outline-success">button</button>
@@ -216,6 +234,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase.js"></script>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
