I have no Idea what is going on in this stupid git hub, IGNORE THIS PUSH

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                                     <label for="crave-3-input">Cravings 3</label>
                                     <input type="text" class="form-control" id="crave-3-input" placeholder="Example input">
                                   </div>
+                                <div class="form-group">
+                                    <label for="other-crave-input">Other</label>
+                                    <input type="text" class="form-control" id="other-crave-input" placeholder="Other Category">
+                                  </div>
                               <div class="form-group">
                                 <label for="zip-input">zip code</label>
                                 <input type="text" class="form-control" id="zip-input" placeholder="Another input">
