--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                         Confirm Party Size
                                       </button>
                                 </div>
-                              <div class="form-group" id="crave-1-input" >
+                              <div class="form-group" id="crave-1-input" style="display: none">
                                   <label class="cravinglabel">Cravings for person 1</label>
                                     <button type="button" class="btnChoice">Italian</button>
                                     <button type="button" class="btnChoice">American</button>
@@ -54,7 +54,7 @@
                                     <button type="button" class="btnChoice">Mexican</button>
                                     <button type="button" class="btnChoice">Indian</button>
                                   </div>
-                              <div class="form-group"   id="crave-2-input">
+                              <div class="form-group"   id="crave-2-input" style="display: none">
                                   <label class="cravinglabel">Cravings for person 2</label>
                                     <button type="button" class="btnChoice">Italian</button>
                                     <button type="button" class="btnChoice">American</button>
@@ -62,7 +62,7 @@
                                     <button type="button" class="btnChoice">Mexican</button>
                                     <button type="button" class="btnChoice">Indian</button>
                                   </div>
-                                  <div class="form-group"  id="crave-3-input">
+                                  <div class="form-group"  id="crave-3-input" style="display: none">
                                           <label class="cravinglabel">Cravings for person 3</label>
                                             <button type="button" class="btnChoice">Italian</button>
                                             <button type="button" class="btnChoice">American</button>
@@ -70,7 +70,7 @@
                                             <button type="button" class="btnChoice">Mexican</button>
                                             <button type="button" class="btnChoice">Indian</button>
                                           </div>
-                                          <div class="form-group" id="crave-4-input">
+                                          <div class="form-group" id="crave-4-input" style="display: none">
                                                   <label class="cravinglabel">Cravings for person 4</label>
                                                     <button type="button" class="btnChoice">Italian</button>
                                                     <button type="button" class="btnChoice">American</button>
@@ -78,7 +78,7 @@
                                                     <button type="button" class="btnChoice">Mexican</button>
                                                     <button type="button" class="btnChoice">Indian</button>
                                           </div>
-                                          <div class="form-group" id="crave-5-input">
+                                          <div class="form-group" id="crave-5-input" style="display: none">
                                                   <label class="cravinglabel">Cravings for person 5</label>
                                                     <button type="button" class="btnChoice">Italian</button>
                                                     <button type="button" class="btnChoice">American</button>
@@ -131,7 +131,7 @@
         </div>
     </div>
 
-    
+
 <!-- End of card body-->
 
 
