display cards with restaurant information

--- a/index.html
+++ b/index.html
@@ -127,22 +127,28 @@
   <div class="row">
 
     <!--Start of card-body-->
-    <div class="col-sm"><div class="card" style="width: 18rem;">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2IuGEdTwI0N0-Mwch8lstcGqrLK15LNhxikpoTIS7GNbw-XKQ"width="300px" height="200px" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Italian</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <div id="venues">
+      <!------------ example card ------------->
+
+      <!-- <div class="col-sm"><div class="card" style="width: 18rem;">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2IuGEdTwI0N0-Mwch8lstcGqrLK15LNhxikpoTIS7GNbw-XKQ"width="300px" height="200px" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Italian
+              </h5>
+              <p class="card-text"></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">1.2 miles away</li>
+              <li class="list-group-item">Recommended by your searches</li>
+              <li class="list-group-item">$$$$</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">1.2 miles away</li>
-            <li class="list-group-item">Recommended by your searches</li>
-            <li class="list-group-item">$$$$</li>
-           </ul>
-          <div class="card-body">
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
-          </div>
-        </div>
+      </div> -->
+      
     </div>
 
 
