--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-success" id="save">Search</button>
+                  <button type="button" class="btn btn-success" id="save" data-dismiss="modal">Search</button>
                 </div>
               </div>
             </div>
